@@ -472,6 +472,13 @@
 *.sed
 -syntax sed
 
+ Postscript
+*.ps
+-syntax ps
+
+*.eps
+-syntax ps
+
  C language file
 *.c
 -autoindent
