@@ -496,6 +496,13 @@
 *.sed
 -syntax sed
 
+ Postscript
+*.ps
+-syntax ps
+
+*.eps
+-syntax ps
+
  C language file
 *.c
 -autoindent
