@@ -4,6 +4,7 @@ Fri Apr  8 10:27:24 EDT 2005
 	Use c syntax file for yacc
 	Add cobol syntax file
 	Add sed syntax file
+	Add postscript syntax file
 
 Thu Apr  7 18:25:07 EDT 2005
 
